--- a/10_fanuc_viewer/package.json
+++ b/10_fanuc_viewer/package.json
@@ -1,11 +1,14 @@
 {
   "name": "10_fanuc_viewer",
   "version": "1.0.0",
-  "description": "",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node app.js",
+    "start-dev": "nodemon app.js"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "express": "^4.17.3"
+  }
 }
